--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         <a href="#gallery" class="btn-contact btn-view-portfolio">View Portfolio</a>
                     </div>
                     <div class="hero-image">
-                        <img src="images/sunset.png" alt="Portrait of Artist Kwin">
+                        <img src="images/Sunset.png" alt="Portrait of Artist Kwin">
                     </div>
                 </div>
             </div>
@@ -57,7 +57,7 @@
                             
                             <h3 class="about-heading">My Creative Journey</h3>
                             <p class="about-text">
-                                My passion lies in breathing life into narratives through visual art. With over five years of experience in digital illustration, I focus on fantasy and sci-fi genres, always prioritizing dynamic composition and emotional depth. I believe every project is a story waiting to be told. I am dedicated to collaboration and bringing client visions into a stunning reality.
+                                I have always been a fan of art, especially visual art. Ever since I was a child, I would draw whenever I had the time and it ultimately developed into a passion. With over five years of experience in digital illustration, I focus on fantasy and sci-fi genres. I am dedicated to collaboration and bringing client visions into a stunning reality.
                             </p>
                             
                             <div class="socials-list">
@@ -256,4 +256,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
