--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div class="card">
                     <div class="hero-text">
                         <h1 class="hero-heading">Greetings, Gremlins!</h1>
-                        <p class="hero-subtext">Hi, I'm Kwin. I specialize in creating stylized portraits, fan arts, and illustrations of both humans (and occasionally animals) for personal and commercial use.</p>
+                        <p class="hero-subtext">Hi! I'm Kwin, a digital artist. I specialize in creating stylized portraits, fan arts, and illustrations of both humans (and occasionally animals) for personal and commercial use.</p>
                         <a href="#gallery" class="btn-contact btn-view-portfolio">View Portfolio</a>
                     </div>
                     <div class="hero-image">
@@ -258,3 +258,4 @@
 </body>
 
 </html>
+
