Update index.html (final)

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                             <blockquote class="feedback-quote">
                                 "Kwin delivered a character portrait that exceeded all expectations. The attention to detail and ability to capture the tone was phenomenal. Highly recommended!"
                             </blockquote>
-                            <p class="feedback-name">— Marvin P., DND Den Master</p>
+                            <p class="feedback-name">— Marvin P., DND Dungeon Master</p>
                         </div>
                     </div>
                     <div class="grid-item grid-item-half">
@@ -258,4 +258,5 @@
 </body>
 
 </html>
+
 
